--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<module>com.flairbit.example.cassandra.api</module>
 		<module>com.flairbit.example.cassandra.impl</module>
 		<module>com.flairbit.example.cassandra.cmd</module>
+		<module>com.flairbit.example.cassandra.itest</module>
 	</modules>
 
 	<build>
