runblacklist for slf4 bundles, see https://github.com/bndtools/bnd/issues/1754)

--- a/example.cassandra.bndrun/pom.xml
+++ b/example.cassandra.bndrun/pom.xml
@@ -6,7 +6,7 @@
 		<version>1.0.0</version>
 	</parent>
 	<artifactId>example.cassandra.bndrun</artifactId>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 	<build>
 		<plugins>
 			<plugin>
@@ -19,7 +19,7 @@
 						<bndrun>com.flairbit.example.cassandra.bndrun</bndrun>
 					</bndruns>
 					<targetDir>.</targetDir>
-				<failOnChanges>false</failOnChanges>
+					<failOnChanges>false</failOnChanges>
 				</configuration>
 				<executions>
 					<execution>
